--- a/package.json
+++ b/package.json
@@ -1,15 +1,31 @@
 {
   "name": "limestrap",
   "version": "1.0.0",
-  "description": "",
+  "description": "Lime survey template",
   "main": "index.html",
   "dependencies": {
-    
+
   },
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-bower": "0.0.13",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "run-sequence": "^2.2.0",
+    "browser-sync": "^2.18.13",
+    "clean-css": "^4.1.9",
+    "del": "^3.0.0",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-clean": "^0.3.2",
+    "gulp-clean-css": "^3.9.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^4.0.0",
+    "gulp-merge": "^0.1.1",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.6.1",
+    "gulp-strip-debug": "^1.1.0",
+    "gulp-uglify": "^3.0.0",
+    "gulp-watch": "^4.3.11"
   },
   "repository": {
     "type": "git",
