--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "limestrap",
   "version": "1.0.0",
-  "description": "Lime survey template",
+  "description": "LimeSurvey (bootstrap+gulp+sass) Template.",
   "main": "index.html",
   "dependencies": {
 
