--- a/package.json
+++ b/package.json
@@ -7,30 +7,35 @@
     "awesome-bootstrap-checkbox": "^1.0.0",
     "bootstrap": "v4.0.0-alpha.6",
     "bootstrap-slider": "^10.0.0",
-    "gulp-npm-files": "^0.1.3",
-    "jquery-ui": "^1.12.1",
+    "font-awesome": "^4.7.0",
+    "jquery-ui-dist": "^1.12.1",
     "jquery-ui-touch-punch": "*"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-bower": "0.0.13",
-    "gulp-sass": "^3.1.0",
-    "run-sequence": "^2.2.0",
     "browser-sync": "^2.18.13",
     "clean-css": "^4.1.9",
+    "csswring": "^6.0.2",
     "del": "^3.0.0",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
+    "gulp-bower": "0.0.13",
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^3.9.0",
     "gulp-concat": "^2.6.1",
+    "gulp-concat-css": "^2.3.0",
     "gulp-imagemin": "^4.0.0",
     "gulp-merge": "^0.1.1",
+    "gulp-npm-files": "^0.1.3",
     "gulp-plumber": "^1.1.0",
+    "gulp-postcss": "^7.0.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-strip-debug": "^1.1.0",
     "gulp-uglify": "^3.0.0",
-    "gulp-watch": "^4.3.11"
+    "gulp-watch": "^4.3.11",
+    "merge2": "^1.2.0",
+    "run-sequence": "^2.2.0"
   },
   "repository": {
     "type": "git",
