--- a/package.json
+++ b/package.json
@@ -23,19 +23,23 @@
     "gulp-clean-css": "^3.9.0",
     "gulp-concat": "^2.6.1",
     "gulp-concat-css": "^2.3.0",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.0.0",
     "gulp-merge": "^0.1.1",
     "gulp-npm-files": "^0.1.3",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^7.0.0",
+    "gulp-print": "^2.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-strip-debug": "^1.1.0",
     "gulp-uglify": "^3.0.0",
     "gulp-watch": "^4.3.11",
+    "gulp-zip": "^4.0.0",
     "merge2": "^1.2.0",
-    "run-sequence": "^2.2.0"
+    "run-sequence": "^2.2.0",
+    "yargs": "^10.0.3"
   },
   "repository": {
     "type": "git",
